--- a/Queuee/app/src/main/res/layout/activity_main.xml
+++ b/Queuee/app/src/main/res/layout/activity_main.xml
@@ -11,5 +11,15 @@
         android:text="Queue"
         android:id="@+id/queueStartButton"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="63dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        android:id="@+id/nextButton"
+        android:layout_alignTop="@+id/queueStartButton"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="51dp" />
 </RelativeLayout>
