--- a/Queuee/app/src/main/res/layout/activity_main.xml
+++ b/Queuee/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,14 @@
         android:layout_alignTop="@+id/queueStartButton"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="51dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Whos Next?"
+        android:id="@+id/textViewShowNext"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp" />
 </RelativeLayout>
