--- a/Queuee/app/src/main/res/layout/activity_main.xml
+++ b/Queuee/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,16 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text=""
+        android:id="@+id/textViewShowWaitTime"
+        android:layout_below="@+id/queueStartButton"
+        android:layout_alignEnd="@+id/textViewShowNext"
+        android:layout_marginTop="98dp" />
+
+
 </RelativeLayout>
