--- a/Queuee2/app/src/main/res/layout/activity_new_queue_view.xml
+++ b/Queuee2/app/src/main/res/layout/activity_new_queue_view.xml
@@ -8,7 +8,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
+        android:id="@+id/startQimageButton"
         android:src="@drawable/button_selector"
         android:background="@null"
         android:layout_centerVertical="true"
