Queue working as a service

--- a/Queuee2/app/src/main/res/layout/activity_new_queue_view.xml
+++ b/Queuee2/app/src/main/res/layout/activity_new_queue_view.xml
@@ -12,6 +12,16 @@
         android:src="@drawable/button_selector"
         android:background="@null"
         android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="# People In Line"
+        android:id="@+id/num_in_line_textView"
+        android:layout_above="@+id/add_to_queue_image_button"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
