--- a/Queuee2/app/src/main/res/layout/activity_new_queue_view.xml
+++ b/Queuee2/app/src/main/res/layout/activity_new_queue_view.xml
@@ -33,4 +33,13 @@
         android:layout_below="@+id/add_to_queue_image_button"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/userAddedTextView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
