--- a/Queuee2/app/src/main/res/layout/activity_in_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_in_queue.xml
@@ -7,7 +7,8 @@
     tools:context="app.com.example.android.queuee2.InQueueActivity">
 
     <TextView android:text="InQueueView" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView" />
 
     <Button
         android:layout_width="wrap_content"
@@ -17,5 +18,25 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="User Removed:"
+        android:id="@+id/removedFromQueueTextView"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="68dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Queue Position:"
+        android:id="@+id/queuePositionTextView"
+        android:layout_below="@+id/removedFromQueueTextView"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="48dp" />
 
 </RelativeLayout>
