--- a/Queuee2/app/src/main/res/layout/activity_in_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_in_queue.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Remove me from queue"
-        android:id="@+id/removeMeFromQueueButton"
+        android:id="@+id/popFromQueueButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp" />
@@ -35,7 +35,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Queue Position:"
         android:id="@+id/queuePositionTextView"
-        android:layout_below="@+id/removedFromQueueTextView"
+        android:layout_below="@+id/popFromQueueTextView"
         android:layout_alignParentStart="true"
         android:layout_marginTop="48dp" />
 
