--- a/Queuee2/app/src/main/res/layout/activity_in_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_in_queue.xml
@@ -13,7 +13,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remove me from queue"
+        android:text="Pop queue"
         android:id="@+id/popFromQueueButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
