--- a/Queuee2/app/src/main/res/values/styles.xml
+++ b/Queuee2/app/src/main/res/values/styles.xml
@@ -5,4 +5,19 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="welcome_text_style">
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">bold|italic</item>
+        <item name="android:textSize">34sp</item>
+        <item name="android:rotation">-10</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
+    <style name="normal_text_style">
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
