--- a/Queuee2/app/src/main/res/layout/activity_in_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_in_queue.xml
@@ -39,8 +39,8 @@
         android:layout_marginTop="48dp" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/waitingAnimationImageView"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
