--- a/Queuee2/app/src/main/res/menu/menu_in_queue.xml
+++ b/Queuee2/app/src/main/res/menu/menu_in_queue.xml
@@ -3,4 +3,9 @@
     tools:context="app.com.example.android.queuee2.InQueueActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
+
+    <item android:id="@+id/action_cancel"
+        android:icon="@drawable/cancel_button"
+        android:title="@string/cancel_text"
+        android:showAsAction="ifRoom" />
 </menu>
