--- a/Queuee2/app/src/main/res/values/styles.xml
+++ b/Queuee2/app/src/main/res/values/styles.xml
@@ -15,7 +15,8 @@
     </style>
 
     <style name="normal_text_style">
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
     </style>
