--- a/Queuee2/app/src/main/res/layout/activity_thank_you.xml
+++ b/Queuee2/app/src/main/res/layout/activity_thank_you.xml
@@ -6,7 +6,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="app.com.example.android.queuee2.ThankYouActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:text="@string/thank_you_text"
+        style="@style/welcome_text_style"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="59dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
