--- a/Queuee2/app/src/main/res/layout/activity_you_are_next.xml
+++ b/Queuee2/app/src/main/res/layout/activity_you_are_next.xml
@@ -4,9 +4,25 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="app.com.example.android.queuee2.model.YouAreNextActivity">
+    tools:context="app.com.example.android.queuee2.YouAreNextActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:text="@string/you_are_next_text"
+        style="@style/welcome_text_style"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="61dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/finished_shopping_button" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Finished Shopping"
+        android:id="@+id/finished_shopping_button"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="70dp" />
 
 </RelativeLayout>
