--- a/Queuee2/app/src/main/res/menu/menu_you_are_next.xml
+++ b/Queuee2/app/src/main/res/menu/menu_you_are_next.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="app.com.example.android.queuee2.model.YouAreNextActivity">
+    tools:context="app.com.example.android.queuee2.YouAreNextActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
 </menu>
