Added outside notifications

--- a/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="172dp"
         android:layout_height="wrap_content"
-        style="@style/welcome_text_style"
+        style="@style/header_text_style"
         android:text="@string/welcome_text"
         android:id="@+id/welcome_text_view"
         android:layout_weight="0.75" />
