--- a/Queuee2/app/src/main/res/layout/activity_thank_you.xml
+++ b/Queuee2/app/src/main/res/layout/activity_thank_you.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:text="@string/thank_you_text"
-        style="@style/welcome_text_style"
+        style="@style/header_text_style"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
