--- a/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,7 +14,9 @@
         style="@style/header_text_style"
         android:text="@string/welcome_text"
         android:id="@+id/welcome_text_view"
-        android:layout_weight="0.75" />
+        android:layout_weight="0.75"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/add_to_queue_image_button" />
 
     <TextView
         android:layout_width="258dp"
@@ -24,7 +26,9 @@
         android:id="@+id/num_in_queue_textview"
         android:text="No Queue Found"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0.21" />
+        android:layout_weight="0.21"
+        android:layout_above="@+id/add_to_queue_image_button"
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -32,6 +36,18 @@
         android:id="@+id/add_to_queue_image_button"
         android:src="@drawable/add_to_queue_button_selector"
         android:background="@null"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-</LinearLayout>
+    <app.com.example.android.queuee2.YourInLinePopUpView
+        android:id="@+id/in_line_pop_up_view"
+        android:visibility="invisible"
+        android:orientation="vertical"
+        android:background="#000000"
+        android:layout_margin="50dp"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent">
+    </app.com.example.android.queuee2.YourInLinePopUpView>
+
+</RelativeLayout>
