pop up on inqueue working

--- a/Queuee2/app/src/main/res/layout/your_in_line_pop_up_view.xml
+++ b/Queuee2/app/src/main/res/layout/your_in_line_pop_up_view.xml
@@ -20,6 +20,7 @@
 
     <Button
         android:id="@+id/inLinePopUpOkButton"
+        android:background="@android:color/transparent"
         android:layout_gravity="center_horizontal"
         android:text="@string/ok_text"
         android:layout_width="wrap_content"
