--- a/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -40,14 +40,4 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
-    <app.com.example.android.queuee2.YourInLinePopUpView
-        android:id="@+id/in_line_pop_up_view"
-        android:visibility="invisible"
-        android:orientation="vertical"
-        android:background="#000000"
-        android:layout_margin="50dp"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent">
-    </app.com.example.android.queuee2.YourInLinePopUpView>
-
-</RelativeLayout>
+</LinearLayout>
