--- a/Queuee2/app/src/main/res/layout/activity_in_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_in_queue.xml
@@ -1,10 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/activityInQueueMainRelativeLayout"
     tools:context="app.com.example.android.queuee2.InQueueActivity">
+
+    <RelativeLayout
+        android:id="@+id/transparentRelativeLayer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true">
+    </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,5 +30,17 @@
         android:id="@+id/waitingAnimationImageView"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <app.com.example.android.queuee2.YourInLinePopUpView
+        android:id="@+id/in_line_pop_up_view"
+        android:orientation="vertical"
+        android:background="#FFFFFF"
+        android:layout_width="500dp"
+        android:layout_height="500dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="150dp"
+        android:layout_marginTop="100dp">
+    </app.com.example.android.queuee2.YourInLinePopUpView>
 
 </RelativeLayout>
