--- a/Queuee2/app/src/main/res/drawable/add_to_queue_button_selector.xml
+++ b/Queuee2/app/src/main/res/drawable/add_to_queue_button_selector.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
  <selector xmlns:android="http://schemas.android.com/apk/res/android">
      <item android:state_pressed="true"
-           android:drawable="@drawable/button_hold" /> <!-- pressed -->
-     <!--<item android:state_focused="true"-->
-           <!--android:drawable="@drawable/button_off" /> &lt;!&ndash; focused &ndash;&gt;-->
-     <item android:drawable="@drawable/button_off" /> <!-- default -->
+           android:drawable="@drawable/add_to_queue_push" /> <!-- pressed -->
+     <item android:state_enabled="false"
+           android:drawable="@drawable/add_to_queue_off" />
+     <item android:drawable="@drawable/add_to_queue_default" /> <!-- default -->
  </selector>
