--- a/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
@@ -14,7 +14,7 @@
         style="@style/header_text_style"
         android:text="@string/welcome_text"
         android:id="@+id/welcome_text_view"
-        android:layout_weight="0.75"
+        android:layout_weight="0.35"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/add_to_queue_image_button" />
 
@@ -24,20 +24,31 @@
         style="@style/normal_text_style"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/num_in_queue_textview"
-        android:text="No Queue Found"
+        android:text="Your queueing companion"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.21"
         android:layout_above="@+id/add_to_queue_image_button"
         android:layout_centerHorizontal="true" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="177dp"
         android:id="@+id/add_to_queue_image_button"
         android:src="@drawable/add_to_queue_button_selector"
         android:background="@null"
         android:layout_gravity="center_horizontal"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content" />
+    <!--roboto medium 14-->
+
+    <TextView
+        android:layout_width="226dp"
+        android:layout_height="wrap_content"
+        style="@style/normal_text_style"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/textView"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.19" />
 
 </LinearLayout>
