--- a/Queuee2/app/src/main/res/layout/leave_queue_confirmation_pop_up_dialog.xml
+++ b/Queuee2/app/src/main/res/layout/leave_queue_confirmation_pop_up_dialog.xml
@@ -9,20 +9,17 @@
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp" />
-
     <TextView
         android:id="@+id/popUpDialogTextView"
-        style="@style/header_text_style"
         android:layout_gravity="center_horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:rotation="-10"
-        android:layout_toRightOf="@+id/popUpDialogImage"
-        android:textColor="#FFF"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:textColor="#000"/>
 
     <LinearLayout
         android:orientation="horizontal"
