--- a/Queuee2/app/src/main/res/layout/in_queue_pop_up_dialog.xml
+++ b/Queuee2/app/src/main/res/layout/in_queue_pop_up_dialog.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="250dp" >
 
     <ImageView
         android:id="@+id/popUpDialogImage"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp" />
 
@@ -19,8 +19,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:rotation="-10"
         android:layout_toRightOf="@+id/popUpDialogImage"
         android:textColor="#FFF"/>
 
