--- a/Queuee2/app/src/main/res/layout/activity_in_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_in_queue.xml
@@ -27,10 +27,21 @@
             style="@style/normal_text_style"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Queue Position:"
             android:id="@+id/queuePositionTextView"
             android:textSize="50sp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
+
+        <ImageButton
+            android:layout_width="300sp"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            android:id="@+id/snooze_button"
+            android:src="@drawable/snooze_button_selector"
+            android:background="@null"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/waiting_animation"
+            android:layout_alignStart="@+id/waiting_animation" />
 
 </RelativeLayout>
