--- a/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
@@ -4,41 +4,53 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context=".NewQueueView"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="172dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="0.26"
         style="@style/header_text_style"
         android:text="@string/welcome_text"
         android:id="@+id/welcome_text_view"
-        android:layout_weight="0.35"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/add_to_queue_image_button" />
+         />
 
     <TextView
         android:layout_width="258dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="0.11"
+        android:gravity="top|center_horizontal"
         style="@style/normal_text_style"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/num_in_queue_textview"
-        android:text="Your queueing companion"
+        android:text="Reserve a place,\n don&apos;t wait in line."
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0.21"
-        android:layout_above="@+id/add_to_queue_image_button"
-        android:layout_centerHorizontal="true" />
+         />
 
     <ImageButton
-        android:layout_width="177dp"
+        android:layout_width="250sp"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
         android:id="@+id/add_to_queue_image_button"
         android:src="@drawable/add_to_queue_button_selector"
         android:background="@null"
         android:layout_gravity="center_horizontal"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content" />
-    <!--roboto medium 14-->
+        android:scaleType="fitStart"
+        android:adjustViewBounds="true"
+         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="0.15"
+        android:layout_gravity="center_horizontal"
+        android:gravity="top"
+        style="@style/normal_text_style"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Searching for a Queue"
+        android:id="@+id/bottom_text_vie"
+         />
 
 </LinearLayout>
