--- a/Queuee2/app/src/main/res/layout/activity_in_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_in_queue.xml
@@ -1,47 +1,68 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/activityInQueueMainRelativeLayout"
-    tools:context="app.com.example.android.queuee2.InQueueActivity">
 
-    <app.com.example.android.queuee2.CancelHeader
-        android:id="@+id/in_line_pop_up_view"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#FFFFFF"
-        android:layout_width="500dp"
-        android:layout_height="50dp">
-    </app.com.example.android.queuee2.CancelHeader>
+        android:id="@+id/activityInQueueMainRelativeLayout"
+        tools:context="app.com.example.android.queuee2.InQueueActivity"
+        android:weightSum="1">
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/waiting_animation"
-            android:layout_width="300sp"
-            android:layout_height="300sp"
-            fresco:placeholderImage="@drawable/waiting_animation"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+        <app.com.example.android.queuee2.CancelHeader
+            android:id="@+id/in_line_pop_up_view"
+            android:orientation="vertical"
+            android:background="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.123333333"
+            >
+        </app.com.example.android.queuee2.CancelHeader>
+
 
         <TextView
-            android:layout_width="wrap_content"
-            style="@style/normal_text_style"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/queuePositionTextView"
-            android:textSize="50sp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_width="172dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.246666667"
+            android:gravity="top|center_horizontal"
+            style="@style/header_text_style"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Around\n1 min"
+            android:id="@+id/time_estimation_text_view" />
+
+        <FrameLayout
+            android:layout_width="300sp"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:layout_gravity="center">
+
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/waiting_animation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:layout_width="match_parent"
+                style="@style/normal_text_style"
+                android:layout_height="70dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/queue_position_text_view"
+                android:textSize="50sp"
+                android:layout_gravity="center"
+                android:text="12" />
+
+        </FrameLayout>
 
         <ImageButton
-            android:layout_width="300sp"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"
+            android:layout_width="250sp"
+            android:layout_height="0dp"
+            android:layout_weight="0.085"
+            android:scaleType="fitCenter"
             android:id="@+id/snooze_button"
             android:src="@drawable/snooze_button_selector"
             android:background="@null"
             android:layout_gravity="center_horizontal"
-            android:layout_below="@+id/waiting_animation"
-            android:layout_alignStart="@+id/waiting_animation" />
+            />
 
-</RelativeLayout>
+    </LinearLayout>
