--- a/Queuee2/app/src/main/res/layout/activity_thank_you.xml
+++ b/Queuee2/app/src/main/res/layout/activity_thank_you.xml
@@ -1,19 +1,34 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="app.com.example.android.queuee2.ThankYouActivity">
 
     <TextView
+        android:layout_width="250sp"
+        android:layout_height="0sp"
+        android:layout_weight="0.37"
         android:text="@string/thank_you_text"
         style="@style/header_text_style"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="59dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-</RelativeLayout>
+    <ImageView
+        android:layout_width="250sp"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:layout_gravity="center"
+        android:src="@drawable/youre_next_smile"
+        />
+
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.131"
+        android:background="@android:color/white"
+        android:src="@drawable/snooze_button_selector"/>
+
+</LinearLayout>
