--- a/Queuee2/app/src/main/res/layout/activity_thank_you.xml
+++ b/Queuee2/app/src/main/res/layout/activity_thank_you.xml
@@ -28,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.131"
+        android:id="@+id/back_to_start_button"
         android:background="@android:color/white"
         android:src="@drawable/snooze_button_selector"/>
 
