--- a/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
@@ -1,6 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -29,17 +32,28 @@
         android:layout_gravity="center_horizontal"
          />
 
-    <ImageButton
+    <FrameLayout
         android:layout_width="250sp"
         android:layout_height="0dp"
         android:layout_weight="0.5"
-        android:id="@+id/add_to_queue_image_button"
-        android:src="@drawable/add_to_queue_button_selector"
-        android:background="@null"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="fitStart"
-        android:adjustViewBounds="true"
-         />
+        android:layout_gravity="center_horizontal" >
+
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/add_to_queue_image_button"
+            android:src="@drawable/add_to_queue_button_selector"
+            android:background="@null"
+            android:scaleType="fitStart"
+            android:adjustViewBounds="true"
+             />
+        <!--fresco:placeholderImage="@drawable/waiting_animation-->
+        <!--<com.facebook.drawee.view.SimpleDraweeView-->
+            <!--android:id="@+id/loading_animation"-->
+            <!--android:layout_width="296dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="center_horizontal|top" />-->
+    </FrameLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,7 +64,7 @@
         style="@style/normal_text_style"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Searching for a Queue"
-        android:id="@+id/bottom_text_vie"
+        android:id="@+id/bottom_text_view"
          />
 
 </LinearLayout>
