splash screen added to queuee2 and started styling cashierqueue

--- a/CashierQueuee/app/src/main/res/layout/activity_queue_in_progress.xml
+++ b/CashierQueuee/app/src/main/res/layout/activity_queue_in_progress.xml
@@ -29,8 +29,8 @@
         android:layout_width="200sp"
         android:layout_height="0dp"
         android:layout_weight="0.4"
-        android:id="@+id/next_image_button"
-        android:src="@drawable/add_to_queue_default"
+        android:id="@+id/activity_queue_in_progress_image_button_next"
+        android:src="@drawable/next_button_selector"
         android:background="@null"
         android:layout_gravity="center_horizontal"
         android:scaleType="fitStart"
@@ -42,7 +42,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.4"
         android:id="@+id/finish_queue_image_button"
-        android:src="@drawable/add_to_queue_default"
+        android:src="@drawable/stop_button_selector"
         android:background="@null"
         android:layout_gravity="center_horizontal"
         android:scaleType="fitStart"
