--- a/CashierQueuee/app/src/main/res/layout/activity_start_queue.xml
+++ b/CashierQueuee/app/src/main/res/layout/activity_start_queue.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1"
+    android:background="@color/start_queue_red"
     tools:context="com.example.abraham.cashierqueuee.StartQueueActivity">
 
     <TextView
@@ -10,7 +11,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:layout_gravity="bottom|center_horizontal"
-        style="@style/header_text_style"
+        style="@style/start_queue_header_text_style"
         android:text="@string/cashier_text"
         android:id="@+id/cashier_text_view"
         />
@@ -19,7 +20,7 @@
         android:layout_width="172dp"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        style="@style/header_text_style"
+        style="@style/start_queue_header_text_style"
         android:text="@string/cashier_number"
         android:gravity="top|center_horizontal"
         android:id="@+id/cashier_number"
@@ -30,7 +31,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.5"
         android:id="@+id/start_queue_image_button"
-        android:src="@drawable/add_to_queue_default"
+        android:src="@drawable/happyface_login"
         android:background="@null"
         android:layout_gravity="center_horizontal"
         android:scaleType="fitStart"
@@ -42,6 +43,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:text="@string/start_queue_text"
+        android:textColor="@color/white"
         android:gravity="top|center_horizontal"
         android:id="@+id/start_queue_text"
         android:layout_gravity="center_horizontal" />
