--- a/CashierQueuee/app/src/main/res/values/styles.xml
+++ b/CashierQueuee/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar.Fullscreen">
+    <style name="AppTheme" parent="android:Theme.Material.Light">
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@color/cashier_pink</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
 
     <style name="header_text_style">
@@ -12,6 +12,16 @@
         <item name="android:textSize">34sp</item>
         <item name="android:rotation">-10</item>
         <item name="android:textColor">#000000</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
+    <style name="start_queue_header_text_style">
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">bold|italic</item>
+        <item name="android:textSize">34sp</item>
+        <item name="android:rotation">-10</item>
+        <item name="android:textColor">#FFFF</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
