--- a/Queuee2/app/src/main/res/values-v21/styles.xml
+++ b/Queuee2/app/src/main/res/values-v21/styles.xml
@@ -2,9 +2,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar.Fullscreen">
+    <style name="AppTheme" parent="android:Theme.Material.Light">
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:actionBarStyle">@style/whiteActionBarStyle</item>
+    </style>
+
+    <style name="whiteActionBarStyle" parent="@android:style/Widget.Material.Light.ActionBar" >
+        <item name="android:background">@android:color/white</item>
+        <item name="android:displayOptions">showCustom</item>
     </style>
 
     <style name="header_text_style">
