--- a/CashierQueuee/app/src/main/res/layout/activity_queue_in_progress.xml
+++ b/CashierQueuee/app/src/main/res/layout/activity_queue_in_progress.xml
@@ -10,20 +10,20 @@
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:layout_gravity="bottom|center_horizontal"
-        style="@style/header_text_style"
-        android:text="@string/cashier_text"
-        android:id="@+id/cashier_text_view"
+        style="@style/in_queue_header_text_style"
+        android:text="@string/number_of_people_in_queue"
+        android:id="@+id/activity_queue_in_progress_textview_number_in_queue"
         />
 
     <TextView
         android:layout_width="172dp"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        style="@style/header_text_style"
+        style="@style/normal_text_style"
         android:text="@string/cashier_number"
         android:gravity="top|center_horizontal"
         android:id="@+id/queue_in_progress_textview_cashier_number"
-        />
+        android:layout_gravity="center_horizontal" />
 
     <ImageButton
         android:layout_width="200sp"
