--- a/Queuee2/app/src/main/res/layout/action_bar_default_layout.xml
+++ b/Queuee2/app/src/main/res/layout/action_bar_default_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="?android:attr/actionBarSize"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:weightSum="1" >
 
     <ImageView
         android:layout_width="wrap_content"
@@ -10,10 +11,29 @@
         android:id="@+id/action_bar_default_layout_cancel_button"
         android:visibility="invisible"/>
 
-    <ImageView
-        android:layout_height="match_parent"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:id="@+id/action_bar_centered_image"
-        android:src="@drawable/logo"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Space
+            android:layout_weight="0.2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:layout_weight="0.6"
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:id="@+id/action_bar_centered_image"
+            android:src="@drawable/logo"/>
+
+        <Space
+            android:layout_weight="0.2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
 
 </FrameLayout>
