--- a/Queuee2/app/src/main/res/layout/activity_in_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_in_queue.xml
@@ -2,54 +2,101 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/activityInQueueMainRelativeLayout"
     tools:context="app.com.example.android.queuee2.InQueueActivity"
     android:weightSum="1">
 
     <TextView
-        android:layout_width="172dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.246666667"
-        android:gravity="top|center_horizontal"
-        style="@style/header_text_style"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Around\n1 min"
-        android:id="@+id/time_estimation_text_view" />
+        android:layout_weight="0.20"
+        style="@style/headerTextStyle"
+        android:gravity="bottom|center_horizontal"
+        android:text="4th"
+        android:textSize="72sp"
+        android:id="@+id/in_queue_activity_header_text_view" />
+
+    <TextView
+        android:layout_weight="0.10"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center_vertical|center_horizontal"
+        style="@style/subheaderTextStyle"
+        android:id="@+id/in_queue_activity_subheader_text_view"
+        android:text="About 4 min left"
+        android:layout_gravity="center_horizontal"
+        />
 
     <FrameLayout
-        android:layout_width="300sp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:layout_gravity="center">
+        android:layout_weight="0.4">
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/waiting_animation"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:actualImageScaleType="fitCenter"
+            app:placeholderImageScaleType="fitCenter"
+            app:placeholderImage="@drawable/waiting_animation"
             android:layout_gravity="center" />
-
-        <TextView
-            android:layout_width="match_parent"
-            style="@style/normal_text_style"
-            android:layout_height="70dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/queue_position_text_view"
-            android:textSize="50sp"
-            android:layout_gravity="center"
-            android:text="12" />
 
     </FrameLayout>
 
-    <ImageButton
-        android:layout_width="250sp"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.085"
-        android:scaleType="fitCenter"
-        android:id="@+id/snooze_button"
-        android:src="@drawable/snooze_button_selector"
-        android:background="@null"
-        android:layout_gravity="center_horizontal"
-        />
+        android:layout_weight="0.2"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.45" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.35">
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/in_queue_activity_snooze_button"
+                android:src="@drawable/snooze_button_selector"
+                android:scaleType="fitCenter"
+                android:background="@null"
+                />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/in_queue_activity_almost_there_snooze_button"
+                android:src="@drawable/snooze_almost_there_button_selector"
+                android:visibility="invisible"
+                android:scaleType="fitCenter"
+                android:background="@null"
+                />
+
+        </FrameLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
+            android:gravity="bottom|center_horizontal"
+            android:id="@+id/in_queue_activity_footer_text_view"
+            android:text="Move two people back in line"/>
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"/>
 
 </LinearLayout>
