--- a/Queuee2/app/src/main/res/layout/in_queue_pop_up_dialog.xml
+++ b/Queuee2/app/src/main/res/layout/in_queue_pop_up_dialog.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/popUpDialogTextView"
-        style="@style/header_text_style"
+        style="@style/headerTextStyle"
         android:layout_gravity="center_horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
