--- a/Queuee2/app/src/main/res/values-v21/styles.xml
+++ b/Queuee2/app/src/main/res/values-v21/styles.xml
@@ -13,39 +13,23 @@
         <item name="android:displayOptions">showCustom</item>
     </style>
 
-    <!--<style name="header_text_style">-->
-        <!--<item name="android:fontFamily">sans-serif-medium</item>-->
-        <!--<item name="android:textStyle">bold|italic</item>-->
-        <!--<item name="android:textSize">34sp</item>-->
-        <!--<item name="android:rotation">-10</item>-->
-        <!--<item name="android:textColor">#143438</item>-->
-        <!--<item name="android:gravity">center</item>-->
-        <!--<item name="android:layout_gravity">center_horizontal</item>-->
-    <!--</style>-->
-
     <style name="headerTextStyle">
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textStyle">italic</item>
         <item name="android:textSize">43sp</item>
-        <item name="android:textColor">#143438</item>
+        <item name="android:textColor">@color/happy_grey</item>
     </style>
 
     <style name="subheaderTextStyle">
         <item name="android:fontFamily">sans-serif</item>
-        <!--<item name="android:textStyle">italic</item>-->
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#143438</item>
+        <item name="android:textColor">@color/happy_grey</item>
     </style>
 
-    <style name="normal_text_style">
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#000000</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textStyle">bold</item>
-    </style>
 
     <color name="happy_blue">#27b5c3</color>
+    <color name="happy_peach">#FCC3B0</color>
+    <color name="happy_grey">#143438</color>
 
 </resources>
 
