--- a/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
@@ -15,7 +15,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="1">
 
             <Space
                 android:layout_width="0dp"
@@ -28,7 +29,6 @@
                 android:layout_weight="0.7"
                 android:scaleType="fitEnd"
                 android:id="@+id/add_to_queue_activity_logo_image_view" />
-            <!--android:src="@drawable/logo_hm"-->
 
             <Space
                 android:layout_width="0dp"
@@ -36,7 +36,6 @@
                 android:layout_weight="0.15"/>
 
         </LinearLayout>
-
 
 
         <TextView
@@ -51,15 +50,15 @@
     </FrameLayout>
 
     <TextView
-        android:layout_weight="0.10"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="0.10"
         android:gravity="center_vertical|center_horizontal"
         style="@style/subheaderTextStyle"
         android:id="@+id/add_to_queue_subtitle_text_view"
         android:text="@string/add_to_queue_activity_welcome_subtitle"
         android:layout_gravity="center_horizontal"
-         />
+        />
 
     <ImageButton
         android:layout_weight="0.4"
