--- a/Queuee2/app/src/main/res/layout/activity_in_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_in_queue.xml
@@ -11,22 +11,21 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.20"
+        android:layout_weight="0.23"
         style="@style/headerTextStyle"
         android:gravity="bottom|center_horizontal"
-        android:text="4th"
-        android:textSize="72sp"
-        android:id="@+id/in_queue_activity_header_text_view" />
+        android:textSize="70sp"
+        android:text="Xth"
+        android:id="@+id/in_queue_activity_header_text_view"/>
 
     <TextView
-        android:layout_weight="0.10"
+        android:layout_weight="0.07"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="center_vertical|center_horizontal"
+        android:gravity="top|center_horizontal"
         style="@style/subheaderTextStyle"
         android:id="@+id/in_queue_activity_subheader_text_view"
-        android:text="About 4 min left"
-        android:layout_gravity="center_horizontal"
+        android:text="About x min left"
         />
 
     <FrameLayout
