--- a/Queuee2/app/src/main/res/layout/activity_thank_you.xml
+++ b/Queuee2/app/src/main/res/layout/activity_thank_you.xml
@@ -1,35 +1,82 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="app.com.example.android.queuee2.ThankYouActivity">
 
     <TextView
-        android:layout_width="250sp"
-        android:layout_height="0sp"
-        android:layout_weight="0.37"
-        android:text="@string/thank_you_text"
-        style="@style/headerTextStyle"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <ImageView
-        android:layout_width="250sp"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:layout_gravity="center"
-        android:src="@drawable/thank_you_smiley"
-        />
-
-    <ImageButton
+        android:text="Thank You"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.131"
-        android:id="@+id/back_to_start_button"
-        android:background="@android:color/white"
-        android:src="@drawable/restart_button_selector"/>
+        android:layout_weight="0.20"
+        style="@style/headerTextStyle"
+        android:gravity="bottom|center_horizontal"
+        android:id="@+id/thank_you_activity_header_text_view"/>
+
+    <TextView
+        android:text="Enjoy your day!"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.10"
+        style="@style/subheaderTextStyle"
+        android:textColor="@android:color/white"
+        android:gravity="center_vertical|center_horizontal"
+        android:id="@+id/thank_you_activity_subheader_text_view"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.4">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/thank_you_activity_animation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:actualImageScaleType="fitCenter"
+            app:placeholderImageScaleType="fitCenter"
+            app:placeholderImage="@drawable/thank_you_smiley"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.45" />
+
+
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.35"
+            android:id="@+id/thank_you_activity_queue_again_button"
+            android:src="@drawable/shop_again_button_selector"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
+            android:gravity="bottom|center_horizontal"
+            android:id="@+id/thank_you_activity_footer_text_view"
+            android:text="press to shop again"/>
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"/>
 
 </LinearLayout>
