--- a/Queuee2/app/src/main/res/layout/activity_you_are_next.xml
+++ b/Queuee2/app/src/main/res/layout/activity_you_are_next.xml
@@ -1,40 +1,62 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="app.com.example.android.queuee2.YouAreNextActivity"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/happy_blue"
-    tools:context="app.com.example.android.queuee2.YouAreNextActivity">
-
-
-    <TextView
-        android:layout_width="250dp"
-        android:layout_height="0dp"
-        android:layout_weight="0.246666667"
-        android:text="@string/you_are_next_text"
-        style="@style/headerTextStyle"
-        android:textColor="@android:color/white"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/youre_next_text_view" />
-
-    <ImageView
-        android:layout_width="250sp"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:layout_gravity="center"
-        android:src="@drawable/youre_next_smile"
-        />
+    android:weightSum="1">
 
     <TextView
+        android:text="It's your turn!"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.131"
+        android:layout_weight="0.20"
+        style="@style/headerTextStyle"
+        android:textColor="@android:color/white"
+        android:gravity="bottom|center_horizontal"
+        android:id="@+id/you_are_next_activity_header_text_view"/>
+
+    <TextView
+        android:text="Go to the cashier"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.10"
         style="@style/subheaderTextStyle"
         android:textColor="@android:color/white"
+        android:gravity="center_vertical|center_horizontal"
+        android:id="@+id/you_are_next_activity_subheader_text_view"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.4">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/you_are_next_activity_animation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:actualImageScaleType="fitCenter"
+            app:placeholderImageScaleType="fitCenter"
+            app:placeholderImage="@drawable/youre_next_smile"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/you_are_next_activity_footer_text_view"
         android:text="Show this screen to the cashier"
-        android:layout_gravity="center"
-        android:gravity="top|center"/>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="bottom|center_horizontal"
+        style="@style/subheaderTextStyle"
+        android:textColor="@android:color/white"
+        android:layout_weight="0.2"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"/>
 
 </LinearLayout>
