--- a/Queuee2/app/src/main/res/values-v21/styles.xml
+++ b/Queuee2/app/src/main/res/values-v21/styles.xml
@@ -31,5 +31,8 @@
     <color name="happy_peach">#FCC3B0</color>
     <color name="happy_grey">#143438</color>
 
+    <item name="headerTextSize" format="float" type="dimen">43.0</item>
+    <item name="headerTextSizeNumber" format="float" type="dimen">70.0</item>
+
 </resources>
 
