--- a/CashierQueuee/app/src/main/res/values-v21/styles.xml
+++ b/CashierQueuee/app/src/main/res/values-v21/styles.xml
@@ -11,14 +11,18 @@
         <item name="android:displayOptions">showCustom</item>
     </style>
 
-    <style name="header_text_style">
+    <style name="headerTextStyle">
         <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">bold|italic</item>
-        <item name="android:textSize">34sp</item>
-        <item name="android:rotation">-10</item>
-        <item name="android:textColor">#000000</item>
-        <item name="android:gravity">center</item>
-        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:textSize">43sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="subheaderTextStyle">
+        <item name="android:fontFamily">sans-serif</item>
+        <!--<item name="android:textStyle">italic</item>-->
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="normal_text_style">
@@ -27,6 +31,15 @@
         <item name="android:textColor">#000000</item>
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="start_queue_header_text_style">
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">bold|italic</item>
+        <item name="android:textSize">34sp</item>
+        <item name="android:textColor">#FFFF</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
 </resources>
