--- a/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
+++ b/Queuee2/app/src/main/res/layout/activity_add_to_queue.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NewQueueView"
@@ -25,9 +25,10 @@
 
             <ImageView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.7"
-                android:scaleType="fitEnd"
+                android:layout_gravity="bottom|center_horizontal"
+                android:scaleType="centerInside"
                 android:id="@+id/add_to_queue_activity_logo_image_view" />
 
             <Space
@@ -60,15 +61,31 @@
         android:layout_gravity="center_horizontal"
         />
 
-    <ImageButton
-        android:layout_weight="0.4"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/add_to_queue_image_button"
-        android:src="@drawable/add_to_queue_button_selector"
-        android:background="@null"
-        android:scaleType="fitCenter"
-         />
+        android:layout_weight="0.4">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/add_to_queue_activity_loading_animation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:actualImageScaleType="fitCenter"
+            app:placeholderImageScaleType="fitCenter"
+            app:placeholderImage="@drawable/animation_loading"
+            android:layout_gravity="center" />
+
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/add_to_queue_image_button"
+            android:src="@drawable/add_to_queue_button_selector"
+            android:background="@null"
+            android:visibility="gone"
+            android:scaleType="fitCenter"
+            />
+
+    </FrameLayout>
 
     <TextView
         android:layout_weight="0.20"
