--- a/Queuee2/app/src/main/res/layout/leave_queue_confirmation_pop_up_dialog.xml
+++ b/Queuee2/app/src/main/res/layout/leave_queue_confirmation_pop_up_dialog.xml
@@ -1,51 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
-    <ImageView
-        android:id="@+id/popUpDialogImage"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp" />
-    <TextView
-        android:id="@+id/popUpDialogTextView"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:textColor="#000"/>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1">
+    <!--android:layout_width="300dp"-->
+    <!--android:layout_height="320dp"-->
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_weight="0.20"
+        android:weightSum="1">
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.15"/>
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:layout_gravity="bottom|center_horizontal"
+            android:scaleType="fitCenter"
+            android:src="@drawable/logo_lindex"
+            android:id="@+id/leave_queue_confirmation_dialog_image" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.15"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.14"
+        android:gravity="center_vertical|center_horizontal"
+        style="@style/subheaderTextStyle"
+        android:text="Are you sure you want to leave?"/>
+    
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.45"
+        android:src="@drawable/sad_face_icon"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.10" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="0.11">
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.3"/>
 
         <Button
-            android:id="@+id/dialogButtonNo"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="YES"
+            android:background="@null"
+            android:id="@+id/leave_queue_confirmation_dialog_yes"
+            android:layout_weight="0.15"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:text="NO"
-            android:layout_marginTop="5dp"
-            android:background="@android:color/transparent"
-            />
-
-        <Button
-            android:id="@+id/dialogButtonOK"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:text="OK"
-            android:layout_marginTop="5dp"
-            android:background="@android:color/transparent"
-            />
+            android:background="@null"
+            android:id="@+id/leave_queue_confirmation_dialog_no"
+            android:layout_weight="0.15"/>
 
     </LinearLayout>
 
