--- a/Queuee2/app/src/main/res/layout/action_bar_default_layout.xml
+++ b/Queuee2/app/src/main/res/layout/action_bar_default_layout.xml
@@ -24,19 +24,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <Space
             android:layout_weight="0.2"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
 
-        <ImageView
-            android:layout_weight="0.6"
-            android:layout_height="match_parent"
+        <!--REMOVE-->
+        <FrameLayout
             android:layout_width="0dp"
-            android:id="@+id/action_bar_centered_image"
-            android:src="@drawable/logo"/>
+            android:layout_height="match_parent"
+            android:layout_weight="0.6">
+
+            <ImageView
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:id="@+id/action_bar_centered_image" />
+                <!--android:src="@drawable/logo"/>-->
+
+            <!--REMOVE-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:id="@+id/action_bar_title_text"
+                style="@style/subheaderTextStyle"
+                android:textSize="24dp"
+                android:text="@string/app_name"/>
+
+        </FrameLayout>
+
 
         <Space
             android:layout_weight="0.2"
