--- a/Queuee2/app/src/main/res/layout/base_linear_layout.xml
+++ b/Queuee2/app/src/main/res/layout/base_linear_layout.xml
@@ -61,7 +61,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4">
+        android:layout_weight="0.4"
+        android:id="@+id/custom_frame_layout">
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/custom_animation_drawee_view"
@@ -103,21 +104,10 @@
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/custom_snooze_image_button"
-                android:src="@drawable/snooze_button_selector"
+                android:id="@+id/custom_footer_image_button"
                 android:scaleType="fitCenter"
                 android:background="@null"
                 />
-
-            <!--<ImageButton-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:id="@+id/in_queue_activity_almost_there_snooze_button"-->
-                <!--android:src="@drawable/snooze_almost_there_button_selector"-->
-                <!--android:visibility="invisible"-->
-                <!--android:scaleType="fitCenter"-->
-                <!--android:background="@null"-->
-                <!--/>-->
 
         </FrameLayout>
 
